--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -269,7 +269,7 @@ watchers:
     image: {{ zonemta_redis.base_image.name }}
     tag: {{ zonemta_redis.base_image.tag }}
     includes:
-      - "[5-9]\\.[0-9]+\\.[0-9]+.*alpine3\\.9"
+      - "[5-9]\\.[0-9]+\\.[0-9]+.*alpine[0-9]+\\.[0-9]+"
   - name: "ZoneMTA Mongo"
     type: docker_registry
     repo: {{ zonemta_mongo.base_image.repo | default('registry-1.docker.io') }}
@@ -285,10 +285,10 @@ watchers:
     image: {{ zonemta.base_image.name }}
     tag: {{ zonemta.base_image.tag }}
     includes:
-      - 10\.[0-9]+\.[0-9]+-alpine
+      - 12\.[0-9]+\.[0-9]+-alpine[0-9]+\\.[0-9]+"
     excludes:
-      - 10\.[0-9]\..*
-      - 10\.1[0-5]\..*
+      - 12\.[0-9]\..*
+      - 12\.1[0-2]\..*
   
   ##################
   # Apps : Logging #
