--- a/ansible/install_infra/roles/kubernetes_longhorn_deploy/templates/00-longhorn.yaml.j2
+++ b/ansible/install_infra/roles/kubernetes_longhorn_deploy/templates/00-longhorn.yaml.j2
@@ -14,7 +14,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.4.0
+    app.kubernetes.io/version: v1.4.1
 ---
 # Source: longhorn/templates/serviceaccount.yaml
 apiVersion: v1
@@ -25,7 +25,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.4.0
+    app.kubernetes.io/version: v1.4.1
 ---
 # Source: longhorn/templates/default-setting.yaml
 apiVersion: v1
@@ -36,7 +36,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.4.0
+    app.kubernetes.io/version: v1.4.1
 data:
   default-setting.yaml: |-
     create-default-disk-labeled-nodes: true
@@ -50,7 +50,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.4.0
+    app.kubernetes.io/version: v1.4.1
 data:
   storageclass.yaml: |
     kind: StorageClass
@@ -80,7 +80,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.4.0
+    app.kubernetes.io/version: v1.4.1
     longhorn-manager: ""
   name: backingimagedatasources.longhorn.io
 spec:
@@ -251,7 +251,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.4.0
+    app.kubernetes.io/version: v1.4.1
     longhorn-manager: ""
   name: backingimagemanagers.longhorn.io
 spec:
@@ -436,7 +436,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.4.0
+    app.kubernetes.io/version: v1.4.1
     longhorn-manager: ""
   name: backingimages.longhorn.io
 spec:
@@ -611,7 +611,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.4.0
+    app.kubernetes.io/version: v1.4.1
     longhorn-manager: ""
   name: backups.longhorn.io
 spec:
@@ -804,7 +804,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.4.0
+    app.kubernetes.io/version: v1.4.1
     longhorn-manager: ""
   name: backuptargets.longhorn.io
 spec:
@@ -987,7 +987,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.4.0
+    app.kubernetes.io/version: v1.4.1
     longhorn-manager: ""
   name: backupvolumes.longhorn.io
 spec:
@@ -1151,7 +1151,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.4.0
+    app.kubernetes.io/version: v1.4.1
     longhorn-manager: ""
   name: engineimages.longhorn.io
 spec:
@@ -1343,7 +1343,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.4.0
+    app.kubernetes.io/version: v1.4.1
     longhorn-manager: ""
   name: engines.longhorn.io
 spec:
@@ -1692,7 +1692,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.4.0
+    app.kubernetes.io/version: v1.4.1
     longhorn-manager: ""
   name: instancemanagers.longhorn.io
 spec:
@@ -1777,7 +1777,7 @@ spec:
             description: InstanceManagerSpec defines the desired state of the Longhorn instancer manager
             properties:
               engineImage:
-                description: 'TODO: deprecate this field'
+                description: 'Deprecated: This field is useless.'
                 type: string
               image:
                 type: string
@@ -1862,7 +1862,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.4.0
+    app.kubernetes.io/version: v1.4.1
     longhorn-manager: ""
   name: nodes.longhorn.io
 spec:
@@ -2101,7 +2101,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.4.0
+    app.kubernetes.io/version: v1.4.1
     longhorn-manager: ""
   name: orphans.longhorn.io
 spec:
@@ -2270,7 +2270,7 @@ spec:
       jsonPath: .spec.groups
       name: Groups
       type: string
-    - description: Should be one of "backup" or "snapshot"
+    - description: Should be one of "snapshot", "snapshot-cleanup", "snapshot-delete" or "backup"
       jsonPath: .spec.task
       name: Task
       type: string
@@ -2332,9 +2332,11 @@ spec:
                 description: The retain count of the snapshot/backup.
                 type: integer
               task:
-                description: The recurring job type. Can be "snapshot" or "backup".
+                description: The recurring job task. Can be "snapshot", "snapshot-cleanup", "snapshot-delete" or "backup".
                 enum:
                 - snapshot
+                - snapshot-cleanup
+                - snapshot-delete
                 - backup
                 type: string
             type: object
@@ -2367,7 +2369,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.4.0
+    app.kubernetes.io/version: v1.4.1
     longhorn-manager: ""
   name: replicas.longhorn.io
 spec:
@@ -2585,7 +2587,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.4.0
+    app.kubernetes.io/version: v1.4.1
     longhorn-manager: ""
   name: settings.longhorn.io
 spec:
@@ -2676,7 +2678,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.4.0
+    app.kubernetes.io/version: v1.4.1
     longhorn-manager: ""
   name: sharemanagers.longhorn.io
 spec:
@@ -2787,7 +2789,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.4.0
+    app.kubernetes.io/version: v1.4.1
     longhorn-manager: ""
   name: snapshots.longhorn.io
 spec:
@@ -2914,7 +2916,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.4.0
+    app.kubernetes.io/version: v1.4.1
     longhorn-manager: ""
   name: supportbundles.longhorn.io
 spec:
@@ -3040,7 +3042,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.4.0
+    app.kubernetes.io/version: v1.4.1
     longhorn-manager: ""
   name: systembackups.longhorn.io
 spec:
@@ -3163,7 +3165,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.4.0
+    app.kubernetes.io/version: v1.4.1
     longhorn-manager: ""
   name: systemrestores.longhorn.io
 spec:
@@ -3265,7 +3267,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.4.0
+    app.kubernetes.io/version: v1.4.1
     longhorn-manager: ""
   name: volumes.longhorn.io
 spec:
@@ -3439,7 +3441,7 @@ spec:
               recurringJobs:
                 description: Deprecated. Replaced by a separate resource named "RecurringJob"
                 items:
-                  description: 'VolumeRecurringJobSpec is a deprecated struct. TODO: Should be removed when recurringJobs gets removed from the volume       spec.'
+                  description: 'Deprecated: This field is useless and has been replaced by the RecurringJob CRD'
                   properties:
                     concurrency:
                       type: integer
@@ -3460,6 +3462,8 @@ spec:
                     task:
                       enum:
                       - snapshot
+                      - snapshot-cleanup
+                      - snapshot-delete
                       - backup
                       type: string
                   type: object
@@ -3617,7 +3621,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.4.0
+    app.kubernetes.io/version: v1.4.1
 rules:
 - apiGroups:
   - apiextensions.k8s.io
@@ -3682,7 +3686,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.4.0
+    app.kubernetes.io/version: v1.4.1
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
@@ -3700,7 +3704,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.4.0
+    app.kubernetes.io/version: v1.4.1
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
@@ -3717,7 +3721,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.4.0
+    app.kubernetes.io/version: v1.4.1
     app: longhorn-manager
     prometheus-target: longhorn-manager
   name: longhorn-backend
@@ -3739,7 +3743,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.4.0
+    app.kubernetes.io/version: v1.4.1
     app: longhorn-ui
   name: longhorn-frontend
   namespace: longhorn-system
@@ -3760,7 +3764,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.4.0
+    app.kubernetes.io/version: v1.4.1
     app: longhorn-conversion-webhook
   name: longhorn-conversion-webhook
   namespace: longhorn-system
@@ -3781,7 +3785,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.4.0
+    app.kubernetes.io/version: v1.4.1
     app: longhorn-admission-webhook
   name: longhorn-admission-webhook
   namespace: longhorn-system
@@ -3802,7 +3806,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.4.0
+    app.kubernetes.io/version: v1.4.1
     app: longhorn-recovery-backend
   name: longhorn-recovery-backend
   namespace: longhorn-system
@@ -3823,7 +3827,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.4.0
+    app.kubernetes.io/version: v1.4.1
   name: longhorn-engine-manager
   namespace: longhorn-system
 spec:
@@ -3839,7 +3843,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.4.0
+    app.kubernetes.io/version: v1.4.1
   name: longhorn-replica-manager
   namespace: longhorn-system
 spec:
@@ -3855,7 +3859,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.4.0
+    app.kubernetes.io/version: v1.4.1
     app: longhorn-manager
   name: longhorn-manager
   namespace: longhorn-system
@@ -3868,16 +3872,16 @@ spec:
       labels:
         app.kubernetes.io/name: longhorn
         app.kubernetes.io/instance: longhorn
-        app.kubernetes.io/version: v1.4.0
+        app.kubernetes.io/version: v1.4.1
         app: longhorn-manager
     spec:
       initContainers:
       - name: wait-longhorn-admission-webhook
-        image: longhornio/longhorn-manager:v1.4.0
+        image: longhornio/longhorn-manager:v1.4.1
         command: ['sh', '-c', 'while [ $(curl -m 1 -s -o /dev/null -w "%{http_code}" -k https://longhorn-admission-webhook:9443/v1/healthz) != "200" ]; do echo waiting; sleep 2; done']
       containers:
       - name: longhorn-manager
-        image: longhornio/longhorn-manager:v1.4.0
+        image: longhornio/longhorn-manager:v1.4.1
         imagePullPolicy: IfNotPresent
         securityContext:
           privileged: true
@@ -3886,17 +3890,17 @@ spec:
         - -d
         - daemon
         - --engine-image
-        - "longhornio/longhorn-engine:v1.4.0"
+        - "longhornio/longhorn-engine:v1.4.1"
         - --instance-manager-image
-        - "longhornio/longhorn-instance-manager:v1.4.0"
+        - "longhornio/longhorn-instance-manager:v1.4.1"
         - --share-manager-image
-        - "longhornio/longhorn-share-manager:v1.4.0"
+        - "longhornio/longhorn-share-manager:v1.4.1"
         - --backing-image-manager-image
-        - "longhornio/backing-image-manager:v1.4.0"
+        - "longhornio/backing-image-manager:v1.4.1"
         - --support-bundle-manager-image
-        - "longhornio/support-bundle-kit:v0.0.17"
+        - "longhornio/support-bundle-kit:v0.0.19"
         - --manager-image
-        - "longhornio/longhorn-manager:v1.4.0"
+        - "longhornio/longhorn-manager:v1.4.1"
         - --service-account
         - longhorn-service-account
         ports:
@@ -3960,7 +3964,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.4.0
+    app.kubernetes.io/version: v1.4.1
 spec:
   replicas: 1
   selector:
@@ -3971,23 +3975,23 @@ spec:
       labels:
         app.kubernetes.io/name: longhorn
         app.kubernetes.io/instance: longhorn
-        app.kubernetes.io/version: v1.4.0
+        app.kubernetes.io/version: v1.4.1
         app: longhorn-driver-deployer
     spec:
       initContainers:
         - name: wait-longhorn-manager
-          image: longhornio/longhorn-manager:v1.4.0
+          image: longhornio/longhorn-manager:v1.4.1
           command: ['sh', '-c', 'while [ $(curl -m 1 -s -o /dev/null -w "%{http_code}" http://longhorn-backend:9500/v1) != "200" ]; do echo waiting; sleep 2; done']
       containers:
         - name: longhorn-driver-deployer
-          image: longhornio/longhorn-manager:v1.4.0
+          image: longhornio/longhorn-manager:v1.4.1
           imagePullPolicy: IfNotPresent
           command:
           - longhorn-manager
           - -d
           - deploy-driver
           - --manager-image
-          - "longhornio/longhorn-manager:v1.4.0"
+          - "longhornio/longhorn-manager:v1.4.1"
           - --manager-url
           - http://longhorn-backend:9500/v1
           env:
@@ -4026,7 +4030,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.4.0
+    app.kubernetes.io/version: v1.4.1
     app: longhorn-recovery-backend
   name: longhorn-recovery-backend
   namespace: longhorn-system
@@ -4040,7 +4044,7 @@ spec:
       labels:
         app.kubernetes.io/name: longhorn
         app.kubernetes.io/instance: longhorn
-        app.kubernetes.io/version: v1.4.0
+        app.kubernetes.io/version: v1.4.1
         app: longhorn-recovery-backend
     spec:
       affinity:
@@ -4057,7 +4061,7 @@ spec:
               topologyKey: kubernetes.io/hostname
       containers:
       - name: longhorn-recovery-backend
-        image: longhornio/longhorn-manager:v1.4.0
+        image: longhornio/longhorn-manager:v1.4.1
         imagePullPolicy: IfNotPresent
         securityContext:
           runAsUser: 2000
@@ -4094,7 +4098,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.4.0
+    app.kubernetes.io/version: v1.4.1
     app: longhorn-ui
   name: longhorn-ui
   namespace: longhorn-system
@@ -4108,7 +4112,7 @@ spec:
       labels:
         app.kubernetes.io/name: longhorn
         app.kubernetes.io/instance: longhorn
-        app.kubernetes.io/version: v1.4.0
+        app.kubernetes.io/version: v1.4.1
         app: longhorn-ui
     spec:
       affinity:
@@ -4125,7 +4129,7 @@ spec:
               topologyKey: kubernetes.io/hostname
       containers:
       - name: longhorn-ui
-        image: longhornio/longhorn-ui:v1.4.0
+        image: longhornio/longhorn-ui:v1.4.1
         imagePullPolicy: IfNotPresent
         volumeMounts:
         - name : nginx-cache
@@ -4159,7 +4163,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.4.0
+    app.kubernetes.io/version: v1.4.1
     app: longhorn-conversion-webhook
   name: longhorn-conversion-webhook
   namespace: longhorn-system
@@ -4173,7 +4177,7 @@ spec:
       labels:
         app.kubernetes.io/name: longhorn
         app.kubernetes.io/instance: longhorn
-        app.kubernetes.io/version: v1.4.0
+        app.kubernetes.io/version: v1.4.1
         app: longhorn-conversion-webhook
     spec:
       affinity:
@@ -4190,7 +4194,7 @@ spec:
               topologyKey: kubernetes.io/hostname
       containers:
       - name: longhorn-conversion-webhook
-        image: longhornio/longhorn-manager:v1.4.0
+        image: longhornio/longhorn-manager:v1.4.1
         imagePullPolicy: IfNotPresent
         securityContext:
           runAsUser: 2000
@@ -4221,7 +4225,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.4.0
+    app.kubernetes.io/version: v1.4.1
     app: longhorn-admission-webhook
   name: longhorn-admission-webhook
   namespace: longhorn-system
@@ -4235,7 +4239,7 @@ spec:
       labels:
         app.kubernetes.io/name: longhorn
         app.kubernetes.io/instance: longhorn
-        app.kubernetes.io/version: v1.4.0
+        app.kubernetes.io/version: v1.4.1
         app: longhorn-admission-webhook
     spec:
       affinity:
@@ -4252,14 +4256,14 @@ spec:
               topologyKey: kubernetes.io/hostname
       initContainers:
       - name: wait-longhorn-conversion-webhook
-        image: longhornio/longhorn-manager:v1.4.0
+        image: longhornio/longhorn-manager:v1.4.1
         command: ['sh', '-c', 'while [ $(curl -m 1 -s -o /dev/null -w "%{http_code}" -k https://longhorn-conversion-webhook:9443/v1/healthz) != "200" ]; do echo waiting; sleep 2; done']
         imagePullPolicy: IfNotPresent
         securityContext:
           runAsUser: 2000
       containers:
       - name: longhorn-admission-webhook
-        image: longhornio/longhorn-manager:v1.4.0
+        image: longhornio/longhorn-manager:v1.4.1
         imagePullPolicy: IfNotPresent
         securityContext:
           runAsUser: 2000
@@ -4286,3 +4290,6 @@ spec:
       serviceAccountName: longhorn-service-account
       nodeSelector:
         capability/general-purpose: 'yes'
+---
+# Source: longhorn/templates/validate-psp-install.yaml
+#
